Revert "[fix] dark mode background color"
This reverts commit 39aa9d3d0f33384d64a8db1cb69e11f55f84052f.

The dark mode fix will be made new branch. And recreate codes.

--- a/styles/ArticleCard.module.css
+++ b/styles/ArticleCard.module.css
@@ -6,14 +6,7 @@
     margin-top: 5px;
     margin-left: 2.5%;
     margin-right: 2.5%;
-    color: black;
 }
-@media (prefers-color-scheme: dark) {
-    .card {
-        background-color: #a9a9a9;
-    }
-}
-
 .card:hover {
     box-shadow: 0 2px 5px black;
 }
