--- a/styles/Infopage.module.css
+++ b/styles/Infopage.module.css
@@ -1,12 +1,3 @@
-.pagebody {
-    height: 100vh;
-}
-@media (prefers-color-scheme: dark) {
-    .pagebody {
-      background-color: #696969;
-    }
-}
-
 .infosearch {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -16,5 +7,4 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: left;
-    background-color: transparent;
 }
