--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -28,6 +28,4 @@
     position:absolute;
     left: 35px;
     font-size: calc(70%);
-    background-color: white;
-    color: black;
 }
