--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,6 @@ a {
   }
   body {
     color: white;
-    background: #696969;
+    background: black;
   }
 }
